<resources>
    <string name="app_name">CreatingCustomizeApplicationAndTheme</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="black">Black</string>

    <string name="blue">Blue</string>

    <string name="pick">Pick Your Colour</string>

    <string name="agree">I agree to the terms and conditions</string>
</resources>
